# WavPlayer

./: Application.cpp  Application.h  AudioEngine.cpp  AudioEngine.h  BNL.austd  BUILD_TESTS.md  CMakeLists.txt  D2DWindow.cpp  D2DWindow.h  MainWindow.cpp  MainWindow.h  MixerWindow.cpp  MixerWindow.h  NUGET_FIX.md  Project.cpp  Project.h  QUICK_START_VS.md  Settings.cpp  Settings.h  SpectrumWindow.cpp  SpectrumWindow.h  TEST_EXPLORER_SETUP.md  TimelineView.cpp  TimelineView.h  TooltipWindow.cpp  TooltipWindow.h  Track.cpp  Track.h  TransportBar.cpp  TransportBar.h  VISUAL_STUDIO_INTEGRATION.md  WavPlayer.rc  WavPlayer.sln  WavPlayer.slnx  WavPlayer.vcxproj  WavPlayer.vcxproj.filters  build_and_test.bat  generate_icon.py  main.cpp  packages.config  (+1 more)
tests/: AudioUtilsTests.cpp  QUICK_START.md  README.md  SettingsTests.cpp  TrackTests.cpp  WavPlayerTests.vcxproj  project_test.cpp  track_test.cpp  trackregion_test.cpp
